deploy/note-book/overlays/prod/piston-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notebook-piston-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: apps-prod-notebook-piston-ratelimit@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: notebook.kakde.eu
      http:
        paths:
          - path: /api/v2/execute
            pathType: Exact
            backend:
              service:
                name: piston
                port:
                  number: 2000
          - path: /api/v2/runtimes
            pathType: Exact
            backend:
              service:
                name: piston
                port:
                  number: 2000
  tls:
    - hosts:
        - notebook.kakde.eu
      secretName: notebook-kakde-eu-tls
